--- a/assets/presentation/index.css
+++ b/assets/presentation/index.css
@@ -128,7 +128,7 @@ button {
 
     background-color: transparent;
     border: 0px;
-    outline: 0px;
+    /* outline: 0px; */
     cursor: pointer;
 
 }
@@ -372,7 +372,7 @@ div#narrative-tree div#entities-column form input {
     padding: 8px 10px;
     font-size: 16px;
     width: 90%;
-    outline: 0px;
+    /* outline: 0px; */
     color: var(--blueishDark);
 
 }
@@ -498,7 +498,7 @@ div#narrative-tree div#entities-column ul.items-list > li.group button.ungroup-b
 div#narrative-tree div#narratives-column ul.items-list > li p {
 
     font-size: 16px;
-    outline: 0px;
+    /* outline: 0px; */
     transition: font-size 0.15s ease-out;
 
 }
