--- a/assets/presentation/index.css
+++ b/assets/presentation/index.css
@@ -50,6 +50,7 @@
     --blackishTransparent2: rgba(0, 0, 0, 0.2);
     --blueishDarkScroll: rgba(23, 57, 76, 0.8);
     --blueishDarkScrollHover: rgba(23, 57, 76, 1);
+    --blueBlink: rgb(70, 168, 255);
 
     /* radius */
 
@@ -494,6 +495,16 @@ div#narrative-tree div#entities-column ul.items-list > li.group button.ungroup-b
 
 
 /** Narratives Column **/
+
+@keyframes blink { 
+   50% { background-color: var(--blueBlink) } 
+}
+
+div#narrative-tree div#narratives-column ul.items-list > li.focused {
+
+    animation: blink .2s step-end 3;
+
+}
 
 div#narrative-tree div#narratives-column ul.items-list > li p {
 
