--- a/assets/presentation/index.css
+++ b/assets/presentation/index.css
@@ -34,6 +34,7 @@
     --blue2: rgb(0, 136, 255);
     --blue2Light: rgba(0, 136, 255, 0.3);
     --blueishDark: rgb(23, 57, 76);
+    --blueishDarker: rgb(16, 40, 53);
     --blueishLighter: rgba(23, 57, 76, 0.3);
     --blueishLightest: rgba(23, 57, 76, 0.2);
     --blueishLightest2: rgba(243, 245, 246, 1);
@@ -236,16 +237,17 @@ div#narrative-tree div.column div.head div#sort-items {
 
 }
 
-div#narrative-tree div.column div.head div#sort-items div#sort-wrapper:hover {
+div#narrative-tree div.column div.head div#sort-items div#sort-wrapper {
 
-    opacity: 0.5;
+    position: relative;
+    display: inline-block;
+    cursor: pointer;
 
 }
 
-div#narrative-tree div.column div.head div#sort-items div#sort-wrapper {
+div#narrative-tree div.column div.head div#sort-items div#sort-wrapper:hover {
 
-    display: inline-block;
-    cursor: pointer;
+    opacity: 1;
 
 }
 
@@ -672,6 +674,53 @@ div#narrative-tree div#preview-column div.head div.counter {
     visibility: hidden;
 
 }
+
+
+
+/** Submenu **/
+
+ul#submenu {
+
+    display: none;
+    position: absolute;
+    background-color: var(--blueishDark);
+    padding: 10px 10px;
+    color: var(--whitish);
+    border-radius: var(--radius13);
+    z-index: 50000;
+
+}
+
+ul#submenu.displayed {
+
+    display: block;
+
+}
+
+ul#submenu li {
+
+    background-color: transparent;
+    padding: 5px 10px;
+    margin-bottom: 2px;
+    color: var(--whitish);
+    border-radius: 10px;
+    cursor: pointer;
+
+}
+
+ul#submenu li:nth-child(even) {
+
+    background-color: var(--blueishDarker);
+
+}
+
+ul#submenu li:hover {
+
+    background-color: var(--blue2);
+    color: var(--whitish);
+
+}
+
 
 
 
