--- a/assets/presentation/index.css
+++ b/assets/presentation/index.css
@@ -156,7 +156,7 @@ img {
 
 }
 
-span.highligher {
+span.highlighter {
 
     background-color: var(--yellowish);
     font-weight: bold;
@@ -173,6 +173,7 @@ span.highligher {
 
 nav.titlebar {
 
+    display: none;
     width: 100%;
     height: 85px;
     margin-bottom: 20px;
